3.1.7
	Allow escaping of " in strings and / in regex
	Fix whitelisting using access.db (Georg Horn)
	Fix NULL pointer referencing in urlcheck code
	Fix body storage so that locators (^ and $) work for body regex
	Fix spurious warning about unknown whitelisting conditions
	Fix memory leaks when using urlchecks
	Makes urlcheck properties and values case insensitives
	Do not retain urlcheck properties if the urlcheck clause did not match
	Allow loading regex in lists of body clauses
	Option to clear urlcheck prop before handling a new recipient
	%D format string for getting the list of matching DNSRBL
	Avoid performing multiple DNSRBL checks for the same IP
	Allow reusing in the ACL of properties gathered from urlcheck
	Fix wrong display of %Xc %Xe and %Xh substitutions 
	Fix documentation: %Xh instead of %Xr
	stat should not report X-Greylist header is message was rejected
	Fix a documentation bug: sender e-mail is %f, not %s
3.1.6
	More format strings, for SMTP code, extended code, message, header
	Fix a crash when using regex without grouping ()
	Document the CVS location in README
3.1.5
	Fix double free when using content filtering
	ACL clauses can now be negated
	msg clauses in ACL can use format strings substitution
	Add an ACL clause to customize X-Greylist header
	Fix serious bugs in DNSRBL code (Jacques Beigbeder)
	Fix a display bug for netblocks
	Add a time clause to match against time sets
	GeoIP support, through the geoip clause
	Fix warning for Postfix build (Nerijus Baliunas)
	%g for substitution by regex back references
	%I for susbtitution by sender IP masked by a CIDR
	Allow specifying socket mode in config file
	Set default user to root for .spec file
	Do not drop root privs if we do not run as root
3.1.4
	Add support for switching to a given group (Ralf S. Engelschall)
	Add substitutions for sendmail macro and strftime in URL checks
	Add custom logs of milter-greylist actions, see stat in greylist.conf