@@ -1,4 +1,4 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL HEADER BODY MAXPEEK STAT POSTMSG GETPROP CLEAR PROP AUTH TLS SPF MSGSIZE RCPTCOUNT OP NO SLASH MINUS COMMA TIME GEOIPDB GEOIP
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG SM_MACRO UNSET URLCHECK RACL DACL HEADER BODY MAXPEEK STAT POSTMSG FORK GETPROP CLEAR PROP AUTH TLS SPF MSGSIZE RCPTCOUNT OP NO SLASH MINUS COMMA TIME GEOIPDB GEOIP 
 
 %{
 #include "config.h"
@@ -6,7 +6,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.78 2007/03/02 21:18:22 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.79 2007/03/15 04:55:45 manu Exp $");
 #endif
 #endif
 
@@ -956,7 +956,14 @@ urlcheckdef:	URLCHECK QSTRING QSTRING TNUMBER urlcheckdef_flags {
 		}
 	;
 
-urlcheckdef_flags:	POSTMSG	{ 
+urlcheckdef_flags:	urlcheckdef_flags urlcheckdef_postmsg
+		|	urlcheckdef_flags urlcheckdef_getprop
+		|	urlcheckdef_flags urlcheckdef_getprop urlcheckdef_clear
+		|	urlcheckdef_flags urlcheckdef_fork
+		|
+		;
+
+urlcheckdef_postmsg:	POSTMSG	{ 
 #ifdef USE_CURL
 				urlcheck_gflags |= U_POSTMSG; 
 #else
@@ -965,7 +972,8 @@ urlcheckdef_flags:	POSTMSG	{
 			    conf_line);
 #endif
 			}
-	|		GETPROP	{ 
+		;
+urlcheckdef_getprop:	GETPROP	{ 
 #ifdef USE_CURL
 				urlcheck_gflags |= U_GETPROP; 
 #else
@@ -974,17 +982,27 @@ urlcheckdef_flags:	POSTMSG	{
 			    conf_line);
 #endif
 			}
-	|		GETPROP	CLEAR { 
+		;
+urlcheckdef_clear:	 CLEAR { 
 #ifdef USE_CURL
-				urlcheck_gflags |= (U_GETPROP | U_CLEARPROP); 
+				urlcheck_gflags |= U_CLEARPROP; 
 #else
 			mg_log(LOG_INFO, 
 			    "CURL support not compiled in line %d", 
 			    conf_line);
 #endif
 			}
-	|
-	;
+		;
+urlcheckdef_fork:	 FORK {
+#ifdef USE_CURL
+				urlcheck_gflags |= U_FORK;
+#else
+			mg_log(LOG_INFO, 
+			    "CURL support not compiled in line %d", 
+			    conf_line);
+#endif
+			}
+		;
 
 
 macrodef_regex:		SM_MACRO QSTRING QSTRING REGEX {
