@@ -1,4 +1,5 @@
 3.1.7
+	Option to perform urlchecks in forked instance to avoid thread-unsafety
 	Allow escaping of " in strings and / in regex
 	Fix whitelisting using access.db (Georg Horn)
 	Fix NULL pointer referencing in urlcheck code
